--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "compiler"
 version = "0.1.0"
+author = ["User: asd123www, Mail: wangzezhou@pku.edu.cn"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,4 +11,5 @@ edition = "2021"
 lalrpop = "0.19.7"
 
 [dependencies]
+# koopa = "0.0.5"
 lalrpop-util = { version = "0.19.7", features = ["lexer"] }
